--- a/easyweb/src/main/res/values/strings.xml
+++ b/easyweb/src/main/res/values/strings.xml
@@ -1,12 +1,12 @@
 <resources>
-    <string name="app_name">Luckybooth</string>
+    <string name="app_name">EasyWeb</string>
     <string name="need_permissions">Needs permission</string>
     <string name="go_to_settings">Jump to settings</string>
     <!-- Dialog -->
     <string name="ok">Confirm</string>
     <string name="confirm">Confirm</string>
     <string name="cancel">Cancel</string>
-    <string name="android_web_agent">ANDROID_AGENT_NATIVE/1.0</string>
+    <string name="android_web_agent">ANDROID_AGENT_NATIVE/1.0&#8194;%1$s</string>
 
     <string name="take_phone_from_camera">Camera</string>
     <string name="take_phone_from_phone">Gallery</string>
@@ -19,4 +19,26 @@
     <string name="notification_error_ssl_cert_invalid">Error ssl cert invalid</string>
     <string name="app_not_installed">Application not installed</string>
     <string name="count_down_text">%1$ds</string>
+
+    <string name="bind_alias">绑定别名</string>
+    <string name="bind_alias_unknown_exception">绑定别名失败，未知异常</string>
+    <string name="bind_alias_success">绑定别名成功</string>
+    <string name="bind_alias_error_frequency">绑定别名失败，请求频次超限</string>
+    <string name="bind_alias_error_param_error">绑定别名失败，参数错误</string>
+    <string name="bind_alias_error_request_filter">绑定别名失败，请求被过滤</string>
+    <string name="bind_alias_error_cid_lost">绑定别名失败，未获取到cid</string>
+    <string name="bind_alias_error_connect_lost">绑定别名失败，网络错误</string>
+    <string name="bind_alias_error_alias_invalid">绑定别名失败，别名无效</string>
+    <string name="bind_alias_error_sn_invalid">绑定别名失败，sn无效</string>
+    <string name="unbind_alias">解绑别名</string>
+    <string name="unbind_alias_unknown_exception">取消绑定别名失败，未知异常</string>
+    <string name="unbind_alias_success">取消绑定别名成功</string>
+    <string name="unbind_alias_error_frequency">取消绑定别名失败，请求频次超限</string>
+    <string name="unbind_alias_error_param_error">取消绑定别名失败，参数错误</string>
+    <string name="unbind_alias_error_request_filter">取消绑定别名失败，请求被过滤</string>
+    <string name="unbind_alias_error_cid_lost">取消绑定别名失败，未获取到cid</string>
+    <string name="unbind_alias_error_connect_lost">取消绑定别名失败，网络错误</string>
+    <string name="unbind_alias_error_alias_invalid">取消绑定别名失败，别名无效</string>
+    <string name="unbind_alias_error_sn_invalid">取消绑定别名失败，sn无效</string>
+
 </resources>
