--- a/example/src/main/res/values/strings.xml
+++ b/example/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">example</string>
     <string name="android_web_agent">ANDROID_AGENT_NATIVE/2.0&#8194;%1$s</string>
+    <string name="facebook_app_id">Facebook App ID</string>
 </resources>
